--- a/toolkits/graphical_models/factors/tests/denoise/CMakeLists.txt
+++ b/toolkits/graphical_models/factors/tests/denoise/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(GraphLab)
 
-add_graphlab_executable(denoise denoise.cpp)
-requires_opencv(denoise)
+# add_graphlab_executable(denoise denoise.cpp)
+# requires_opencv(denoise)
 
 file(COPY noisy_img.png 
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
