--- a/toolkits/graphical_models/CMakeLists.txt
+++ b/toolkits/graphical_models/CMakeLists.txt
@@ -15,14 +15,14 @@ add_graphlab_executable(profile_lbp_synthetic2 profile_lbp_synthetic2.cpp)
 requires_eigen(profile_lbp_synthetic2)
 
 
-add_graphlab_executable(synthetic_image_data synthetic_image_data.cpp)
-requires_opencv(synthetic_image_data)
+# add_graphlab_executable(synthetic_image_data synthetic_image_data.cpp)
+# requires_opencv(synthetic_image_data)
 
 
 
-add_graphlab_executable(mplp_denoise mplp_denoise.cpp)
-requires_eigen(mplp_denoise)
-requires_opencv(mplp_denoise)
+# add_graphlab_executable(mplp_denoise mplp_denoise.cpp)
+# requires_eigen(mplp_denoise)
+# requires_opencv(mplp_denoise)
 
 
 subdirs(factors)
